tests/baselines/reference/accessorsOverrideProperty3.errors.txt
tests/cases/conformance/classes/propertyMemberDeclarations/accessorsOverrideProperty3.ts(6,9): error TS2611: 'sound' is defined as a property in class 'Animal', but is overridden here in 'Lion' as an accessor.


==== tests/cases/conformance/classes/propertyMemberDeclarations/accessorsOverrideProperty3.ts (1 errors) ====
    declare class Animal {
        sound: string
    }
    class Lion extends Animal {
        _sound = 'grrr'
        get sound() { return this._sound } // error here
            ~~~~~
!!! error TS2611: 'sound' is defined as a property in class 'Animal', but is overridden here in 'Lion' as an accessor.
        set sound(val) { this._sound = val }
    }
    